# quady

./: RGB_MODES.md  SUMMARY.md  TEST_COVERAGE.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  rgb.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ColorWheel.tsx
